src/global.scss
// MAIN FONT
@import url("https://fonts.googleapis.com/css?family=Paytone+One");

@import "./theme/variables.scss";

@import "../node_modules/bootstrap/scss/bootstrap-reboot.scss";
@import "../node_modules/bootstrap/scss/bootstrap-grid.scss";
@import "../node_modules/bootstrap/scss/_utilities.scss";
@import "../node_modules/bootstrap/scss/_tables.scss";
// @import '../node_modules/bootstrap/scss/bootstrap.scss';
@import "./theme/reset.scss";

@import "../node_modules/@angular/material/theming";

@include mat-core();

@import "./theme/themes/default-theme.scss";

@import "./theme/reset-theme.scss";
@import "./theme/animation.scss";
@import "app/app.component.scss-theme";
@import "app/ui/pages/home/home.page.scss-theme.scss";

@mixin custom-components-theme($theme) {
  @include anms-styles-reset-theme($theme);
  @include app-component-theme($theme);
  @include app-home-component-theme($theme);
  // @include anms-about-component-theme($theme);
  // @include anms-big-input-component-theme($theme);
  // @include anms-notifications-component-theme($theme);
  // @include anms-todos-container-component-theme($theme);
  // @include anms-stock-market-container-component-theme($theme);
  // @include anms-parent-component-theme($theme);
  // @include anms-child-component-theme($theme);
  // @include anms-examples-component-theme($theme);
}

.default-theme {
  @include angular-material-theme($anms-theme);
  @include custom-components-theme($anms-theme);

  .mat-drawer.mat-drawer-push {
    margin-top: 20px;
    background-color: $primary-color;
    font-weight: bold;
  }
  .mat-list-item-content {
    color: white;
  }
}

body,
html {
  height: 100%;
}
.app-loading {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
}
.app-loading .spinner {
  height: 200px;
  width: 200px;
  animation: rotate 2s linear infinite;
  transform-origin: center center;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}
.app-loading .spinner .path {
  stroke-dasharray: 1, 200;
  stroke-dashoffset: 0;
  animation: dash 1.5s ease-in-out infinite;
  stroke-linecap: round;
  stroke: #ddd;
}

.font-base {
  font-family: $font-family;
}
.font-size-small{
  font-size: $font-size-small;
}

.text-white {
  color: white;
}

.text-center {
  text-align: center;
}

.page-title {
  // font-size: x-large;
  font-weight: bold;
  text-transform: uppercase;
  text-align: center;
}

.page-subtitle {
  font-size: large;
  font-weight: bold;
}

.description {
  font-size: small;
  font-weight: bold;
}

.flex-row-center {
  display: flex;
  flex-direction: row;
  justify-content: center;
  overflow: auto;
}

.flex-row-left {
  display: flex;
  flex-direction: row;
  justify-content: left;
}

.space-between {
  padding: 20px;
}

.margin-between {
  margin: auto 30px;
}

.w60 {
  max-width: 60%;
}

.w80-center {
  width: 80%;
  margin: 0 10%;
}

hr {
  border: 3px solid $color-primary;
  width: 70%;
  opacity: 100%;
  margin: auto;
}

.bullet-point {
  font-size: large;
  width: 50%;
}

.section {
  opacity: 0;
  margin: 30px 10%;
}

.animate {
  opacity: 1;
  overflow: hidden;
  animation-name: fadeIn;
  animation-duration: 2s;
}


.features {
  fa-icon {
    font-size: 9rem;
    color: $color-primary;
  }
}

.speciality {
  color: $color-primary;
  text-transform: uppercase;
  font-weight: bold;
  font-size: large;
}

.box {
  border: 3px solid $color-primary;
  border-radius: 10px;
  padding: 20px 40px;
  background-color: white;
}

h2 > span {
  font-size: 40px;
}

.subtitle {
  font-size: 24px;
  color: $color-primary;
  font-weight: bold;
}

ul {
  list-style: square;
  font-weight: bold;
  font-size: 20px;

  li::marker {
      font-size: 30px;
      color: $color-primary;
  }
}

.description-list {
  display: flex;
  justify-content: center;
}

.description {
  font-weight: bold;
  color: $color-primary;
  font-size: medium;
}


.purple-fill {
  color: white;
  background-color: $color-primary;

  ul {
    li::marker {
      color: white;
    }
  }
}

.white-fill {
  color: $color-primary;
  background-color: white;

  ul {
    li::marker {
      color: $color-primary;
    }
  }
}

.emphasize {
  font-size: 28px;
}

.box-title {
  font-size: 16px;
}

.segment {
  padding: 20px 50px;
  font-weight: bold;
}

table.segments {
  margin-left: auto;
  margin-right: auto;
  border-collapse: separate;
  border-spacing: 50px 15px;
}

.solution {
  background: url('./assets/background-lowRes.jpg') 100% 75px / cover no-repeat;
  height: 80vh;
}

.segments-wrapper {
  padding: 20px;
}

.purple-text {
  color: $color-primary;
}

.text-left {
  text-align: left;
}

.text-right {
  text-align: right;
}

@media screen and (max-width: 768px) {
  .bullet-point {
    width: 100%;
  }

  .flex-row-center {
    transform: translateX(25px);
  }

  ul {
    font-size: 16px;

    li::marker {
      font-size: 20px;
    }
  }

  .row {
    padding-left: 0;
    margin-right: 0;
  }

  .nav {
    ul {
      list-style: none;
      text-align: center;
      font-size: 20px;

      li {
        display: block;
      }
    }
  }

  .description-list {
    ul {
      font-size: 16px;
    }
  }

  .section {
    margin: 30px 10% 30px 0;

    span {
      font-size: 30px;
    }

    h3 {
      font-size: 20px;
      margin-bottom: 20px;
    }
  }

  .solution {
    // background: url('./assets/background.jpg') 100% 100% / cover;
    background: none;
    height: 100%;
  }

  table.segments{
    border-spacing: 0;

    tr > * {
      display: block;
    }
    
    tr {
      display: table-cell;
    }

    td {
      margin: 30px auto;

      .emphasize {
        font-size: 24px;
      }
    }
  }

  .segments-wrapper {
    transform: translateX(5%);
  }

  .flex-row-center,
  .flex-row-left {
    flex-wrap: wrap;
  }
}

